# kbackup

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .krazy  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.in  README  TODO  acinclude.m4  configure  configure.in  configure.in.in  kbackup.spec  snapcraft.yaml
admin/: acinclude.m4.in  cvs.sh
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/de/: CMakeLists.txt  Makefile.am  index.docbook
doc/en/: CMakeLists.txt  Makefile.am  Makefile.in  index.cache.bz2  index.docbook  man-kbackup.1.docbook
doc/fr/: CMakeLists.txt  Makefile.am  index.docbook
doc/ru/: CMakeLists.txt  index.docbook
po/: CMakeLists.txt  Makefile.in  Messages.sh  cs.po  de.gmo  de.po  es.po  fr.gmo  fr.po  ia.po  it.po  kbackup.pot  pt.po  pt_BR.po  ru.po  sk.po  sv.po
po/ar/: kbackup.po
po/ast/: kbackup.po
po/bg/: kbackup.po
po/ca/: kbackup.po
po/ca/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/ca@valencia/: kbackup.po
po/cs/: kbackup.po
po/da/: kbackup.po
po/de/: kbackup.po
po/de/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/el/: kbackup.po
po/en_GB/: kbackup.po
po/eo/: kbackup.po
po/es/: kbackup.po
po/es/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/et/: kbackup.po
po/eu/: kbackup.po
po/fi/: kbackup.po
po/fr/: kbackup.po
po/ga/: kbackup.po
po/gl/: kbackup.po
po/he/: kbackup.po
po/hi/: kbackup.po
po/ia/: kbackup.po
po/ie/: kbackup.po
po/is/: kbackup.po
po/it/: kbackup.po
po/it/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/ja/: kbackup.po
po/ka/: kbackup.po
po/ko/: kbackup.po
po/lt/: kbackup.po
po/lv/: kbackup.po
po/nl/: kbackup.po
po/nl/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/nn/: kbackup.po
po/pl/: kbackup.po
po/pt/: kbackup.po
po/pt_BR/: kbackup.po
po/pt_BR/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/ro/: kbackup.po
po/ru/: kbackup.po
po/sa/: kbackup.po
po/sk/: kbackup.po
po/sl/: kbackup.po
po/sl/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/sv/: kbackup.po
po/sv/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/tr/: kbackup.po
po/tr/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/ug/: kbackup.po
po/uk/: kbackup.po
po/uk/docs/kbackup/: index.docbook  man-kbackup.1.docbook
po/zh_CN/: kbackup.po
po/zh_TW/: kbackup.po
src/: Archiver.cxx  Archiver.hxx  CMakeLists.txt  MainWidget.cxx  MainWidget.hxx  MainWidget.ui  MainWidget.ui.h  MainWidgetBase.ui  MainWindow.cxx  MainWindow.hxx  Makefile.am  Makefile.in  Messages.sh  Selector.cxx  Selector.hxx  SettingsDialog.cxx  SettingsDialog.hxx  SettingsDialog.ui  SettingsDialog.ui.h  XmlMessages.sh  kbackup.desktop  kbackup.lsm  kbackup.qrc  kbackup.xml  kbackupui.rc  main.cxx  org.kde.kbackup.appdata.xml  org.kde.kbackup.desktop  rotateScript.sh  sliceScript.sh  x-kbp.desktop
src/pics/: CMakeLists.txt  Makefile.am  Makefile.in  hi22-app-kbackup_runs.mng
